--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -2,11 +2,12 @@
     border-radius: 1rem;
     box-shadow: 2px -3px 10px $mainLightColor, 0 0 15px $mainDarkColor,
         -2px 3px 20px $mainLightColor;
-
     padding: 3rem;
     background-color: $mainLightColor;
     margin-top: 5rem;
     margin-bottom: 5rem;
+    height: 60rem;
+    overflow: scroll;
     &__image {
         width: 30rem;
         height: 30rem;
