fix register sms error phone and ui

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -420,6 +420,7 @@ a {
   margin-bottom: 5rem;
   height: 60rem;
   overflow: scroll;
+  overflow-x: hidden;
 }
 .welcome-container__image {
   width: 30rem;
