--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -8,6 +8,7 @@
     margin-bottom: 5rem;
     height: 60rem;
     overflow: scroll;
+    overflow-x: hidden;
     &__image {
         width: 30rem;
         height: 30rem;
