--- a/src/assets/css/pages/_inboxSideBar.scss
+++ b/src/assets/css/pages/_inboxSideBar.scss
@@ -1,5 +1,6 @@
 .inbox-side-bar {
-     min-width: 40rem;
+     width: 25%;
+     min-width: 35rem;
      overflow: scroll;
      overflow-x: hidden;
 }
