--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -445,8 +445,8 @@ a {
   }
 }
 .home {
-  display: flex;
   height: 90vh;
+  display: flex;
 }
 .home__inbox-list {
   height: 80vh;
@@ -550,9 +550,9 @@ a {
 
 .box-chat-container {
   height: 90vh;
+  width: 50%;
   display: flex;
   flex-direction: column;
-  flex: 8;
   border-right: thin solid #dddddd;
 }
 
@@ -937,9 +937,8 @@ a {
 }
 
 .info-room-right {
-  flex-grow: 1;
   background-color: #FBFBFB;
-  max-width: 35rem;
+  width: 25%;
 }
 .info-room-right__scroll {
   height: calc(90vh - 10rem);
@@ -1096,7 +1095,8 @@ a {
 }
 
 .inbox-side-bar {
-  min-width: 40rem;
+  width: 25%;
+  min-width: 35rem;
   overflow: scroll;
   overflow-x: hidden;
 }
