--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -1,6 +1,6 @@
 .home {
-    display: flex;
     height: 90vh;
+    display: flex;
     &__inbox-list {
         height: 80vh;
         background-color: white;
@@ -115,9 +115,9 @@
 
 .box-chat-container {
     height: 90vh;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    flex: 8;
     border-right: thin solid #dddddd;
 }
 
